# dqn_crasher

./: .gitignore  1_cycle.py  README.md  [https___highway-env.farama.org_installation_](htt.md  add_mobil_vs_npc_state.py  additional_state_plots.py  arguments.py  buffers.py  config.py  crash_analysis.py  crash_reward.py  crash_wrappers.py  create_env.py  df2csv.py  dqn_agent.py  ego_model.pth  environment.yml  eval.py  eval_plot_generation.ipynb  examine_elo.py  examine_runs.py  helpers.py  model_pool.py  models.py  multi_agent_dqn.py  multi_agent_pool.py  npc_model.pth  npc_v_mobil.py  plot_epsilon_decay.py  plot_metrics.py  plot_results.py  plot_reward.py  pool_parse.py  pyproject.toml  rl_crash.test  run_training.py  safety_hardening.py  scenarios.py  sh_two_lane.py  speed_plot.py  (+21 more)
Collision-Detection/: README.md  collision_methods.py  contact_tracking.py  main.py  manual_control.py  manual_control_contact.py  manual_control_simple_contact.py  manual_control_universal.py  sat_collision.py
dqn_crasher/: buffers.py  config.py  dqn_agent.py  helpers.py  main.py  policies.py  runner.py  scenarios.py  slurm_sweep.sh  training_distribution.py  trajectory_store.py  utils.py  wandb_logging.py
env_configs/: ma_cut_in.yaml  multi_agent.yaml  single_agent.yaml  single_agent_crash.yaml
examples/: 1_cycle.py  add_mobil_vs_npc_state.py  additional_state_plots.py  analyze_log.py  arguments.py  crash_analysis.py  crash_wrappers.py  create_env.py  df2csv.py  eval.py  examine_elo.py  examine_runs.py  model_pool.py  multi_agent_dqn.py  multi_agent_pool.py  npc_v_mobil.py  (+36 more)
(+152 files in other folders)
